# pxt-bitsflow

./: .gitattributes  .gitignore  MORNING-NOTES.md  README.md  package.json  pxtarget.json  targetconfig.json
docker/: .dockerignore  Dockerfile  Dockerfile.pico  entrypoint.sh
docs/: SUMMARY.md  getting-started.md  reference.md
docs/reference/: analog.md  bmp280.md  i2c.md  led.md  mpu6050.md  music.md  neopixel.md  oled.md  pins.md  pwm.md  sonar.md  spi.md  timing.md  uart.md
editor/: extension.ts  tsconfig.json
firmware/rp2040/: CMakeLists.txt
firmware/rp2040/include/: pthread.h
firmware/rp2040/src/: rp2040_main.cpp  rp2040_platform.cpp
libs/: base
libs/blocksprj/: README.md
libs/core/: README.md  analog.cpp  analog.ts  bmp280.ts  dal.d.ts  dalpatch.d.ts  i2c.cpp  i2c.ts  led.cpp  led.ts  mpu6050.ts  music.cpp  music.ts  neopixel.cpp  neopixel.ts  oled.ts  pinevents.ts  pins.cpp  pins.ts  pwm.cpp  pwm.ts  pxt.json  sonar.ts  spi.cpp  spi.ts  timing.cpp  timing.ts  uart.cpp  uart.ts  vmscreen.cpp
libs/core/_locales/: core-jsdoc-strings.json  core-strings.json
libs/tsprj/: README.md  main.ts  pxt.json
projects/blink/: main.ts  pxt.json
projects/counter/: main.ts  pxt.json
projects/firmware/: main.ts  pxt.json
projects/vmtest/: main.ts  pxt.json
sim/: simulator.ts  tsconfig.json
sim/public/: firmware.uf2  simulator.html
theme/color-themes/: bitsflow-dark.json
tools/: build-pico-uf2.sh  build-pxt-core.sh  build-rp2040.ps1  build-vm-runtime.sh  docker-vm.ps1  embed-pxt64.js  gen-bytecode-uf2.js  gen-oled-font.js  gen-vm-image.js  patch-vm-sources.js  pico-mounts.ps1
